--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 ("ontouchstart"in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
             }(window, document);
         </script>
-        <link href="Frame 4.png" rel="shortcut icon" type="image/x-icon"/>
-        <link href="Frame 4.png" rel="apple-touch-icon"/>
+        <link href="citadel.webp" rel="shortcut icon" type="image/x-icon"/>
+        <link href="citadel.webp" rel="apple-touch-icon"/>
         <script src="https://js.chargebee.com/v2/chargebee.js" data-cb-site="profitalgo" data-cb-refersion-enabled="true" data-cb-fbq-enabled="true"></script>
         <script>
             (function(w) {
