--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div data-delay="0" data-hover="false" class="nav-dropdown w-dropdown">
                             <div class="nav-dropdown-toggle w-dropdown-toggle">
                                 <div class="text-block-9">
-                                    <a href="https://discord.gg/r9GXpddmNz" target="_blank" class="link-2">Discord</a>
+                                    <a href="https://discord.gg/ByKvy3srnq" target="_blank" class="link-2">Discord</a>
                                 </div>
                             </div>
                             <nav class="nav-dropdown-list w-dropdown-list"></nav>
@@ -113,7 +113,7 @@
                         <div data-delay="0" data-hover="false" class="nav-dropdown w-dropdown">
                             <div class="nav-dropdown-toggle w-dropdown-toggle">
                                 <div>
-                                    <a href="https://discord.gg/xkXbD2nkmr" target="_blank" class="link-2">Support</a>
+                                    <a href="https://discord.gg/ByKvy3srnq" target="_blank" class="link-2">Support</a>
                                 </div>
                             </div>
                             <nav class="nav-dropdown-list w-dropdown-list"></nav>
@@ -155,7 +155,7 @@
                             </h1>
                             <p data-w-id="159424c2-a6d2-5785-1a75-7da9b1b07632" style="opacity:0" class="margin-bottom margin-small">Elevate your trading game with our Platform🚀</p>
                             <div data-w-id="159424c2-a6d2-5785-1a75-7da9b1b07634" style="opacity:0" class="buttons-row">
-                                <a href="https://discord.gg/r9GXpddmNz" class="button tertriary-copy w-button">Become Affiliate</a>
+                                <a href="https://discord.gg/ByKvy3srnq" class="button tertriary-copy w-button">Become Affiliate</a>
                                 <a href="https://whop.com/alphanova" class="button w-button">Get Access</a>
                             </div>
                         </div>
@@ -372,9 +372,9 @@
                     <div class="footer-content-flex">
                         <div class="footer-utility-right-wrapper">
                             <a href="https://www.instagram.com/alphanova.io/" class="footer-link">Social Media</a>
-                            <a href="https://discord.gg/xkXbD2nkmr" class="footer-link">Become an Affiliate</a>
-                            <a href="https://discord.gg/xkXbD2nkmr" class="footer-link">Support</a>
-                            <a href="https://discord.gg/xkXbD2nkmr" target="_blank" class="footer-link">Disclaimer</a>
+                            <a href="https://discord.gg/ByKvy3srnq" class="footer-link">Become an Affiliate</a>
+                            <a href="https://discord.gg/ByKvy3srnq" class="footer-link">Support</a>
+                            <a href="https://discord.gg/ByKvy3srnq" target="_blank" class="footer-link">Disclaimer</a>
                         </div>
                     </div>
                     <div class="footer-bottom-text">© AlphaNova 2023. All Rights Reserved.</div>
