--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             </h1>
                             <p data-w-id="159424c2-a6d2-5785-1a75-7da9b1b07632" style="opacity:0" class="margin-bottom margin-small">Elevate your trading game with our Platform🚀</p>
                             <div data-w-id="159424c2-a6d2-5785-1a75-7da9b1b07634" style="opacity:0" class="buttons-row">
-                                <a href="https://discord.gg/ByKvy3srnq" class="button tertriary-copy w-button">Become an Affiliate</a>
+                                <a href="https://discord.gg/ByKvy3srnq" class="button tertriary-copy w-button">Free Discord</a>
                                 <a href="https://whop.com/alphanova" class="button w-button">Get Access</a>
                             </div>
                         </div>
