--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
                     </div>
                 </div>
             </div>
+            <div>
+                <video src="https://framerusercontent.com/assets/RSoO8sCJrY7vIAhOqhvAHqwt4.mp4" loop="" muted="" playsinline="" style="cursor:auto;width:100%;height:100%;border-radius:0px;display:block;object-fit:cover;background-color:rgba(0, 0, 0, 0);object-position:50% 50%"></video>
+            </div>
             <div data-w-id="0ea0797f-1865-3424-e1a3-c4fb3ea63fbc" class="section">
                 <div class="subtitle">FEATURES</div>
                 <div class="container-large">
