--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
             </div>
             <div>
-                <video autoplay muted src="alphavideo.mp4" width=25%>
+                <video autoplay muted loop src="alphavideo.mp4">
             </div>
             <div data-w-id="0ea0797f-1865-3424-e1a3-c4fb3ea63fbc" class="section">
                 <div class="subtitle">FEATURES</div>
