--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
             </div>
             <div>
-                <video autoplay muted loop src="alphavideo.mp4" style="cursor:auto;width:50%;height:50%;border-radius:0px;display:block;object-fit:cover;background-color:rgba(0, 0, 0, 0);object-position:55% 55%">
+                <video autoplay muted loop src="alphavideo.mp4" style="cursor:auto;width:50%;height:50%;border-radius:0px;display:block;object-fit:cover;background-color:rgba(0, 0, 0, 0);object-position:center">
             </div>
             <div data-w-id="0ea0797f-1865-3424-e1a3-c4fb3ea63fbc" class="section">
                 <div class="subtitle">FEATURES</div>
