--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             <nav class="nav-dropdown-list w-dropdown-list"></nav>
                         </div>
                         <div class="burger-button-wrap">
-                            <a href="https://whop.com/alphanova" class="button-3 w-button">Buy Now</a>
+                            <a href="https://discord.gg/3nvC4FzxpJ" class="button-3 w-button">Buy Now</a>
                         </div>
                     </nav>
                     <div class="nav-buttons-wrapper">
@@ -141,7 +141,7 @@
                             </div>
                         </div>
                         <div class="tablet-hide">
-                            <a href="https://whop.com/alphanova" class="button-3 w-button">Get Access</a>
+                            <a href="https://discord.gg/3nvC4FzxpJ" class="button-3 w-button">Get Access</a>
                         </div>
                     </div>
                 </div>
@@ -156,7 +156,7 @@
                             <p data-w-id="159424c2-a6d2-5785-1a75-7da9b1b07632" style="opacity:0" class="margin-bottom margin-small">Elevate your trading game with our Platform🚀</p>
                             <div data-w-id="159424c2-a6d2-5785-1a75-7da9b1b07634" style="opacity:0" class="buttons-row">
                                 <a href="https://discord.gg/ByKvy3srnq" class="button tertriary-copy w-button">Free Discord</a>
-                                <a href="https://whop.com/alphanova" class="button w-button">Get Access</a>
+                                <a href="https://discord.gg/3nvC4FzxpJ" class="button w-button">Get Access</a>
                             </div>
                         </div>
                         <div class="home-1-hero-images">
@@ -284,7 +284,7 @@
                                             <div class="card">
                                                 <div class="pricing-content pd-bottom-40px">
                                                     <div class="subtitle">MONTHLY</div>
-                                                    <div class="heading-h1-size mg-right-8px"><s>$19.99</s><br>$9.99</div>
+                                                    <div class="heading-h1-size mg-right-8px"><s>$19.99</s><br>FREE</div>
                                                     <p>Access paid monthly.</p>
                                                     <div class="mg-top-48px">
                                                         <div class="text-200 bold color-neutral-800 list">What &#x27;s included:</div>
@@ -312,7 +312,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="mg-top-24px">
-                                                        <a href="https://whop.com/alphanova" class="btn-primary width-100 w-button ">Claim Your Access</a>
+                                                        <a href="https://discord.gg/3nvC4FzxpJ" class="btn-primary width-100 w-button ">Claim Your Access</a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -325,7 +325,7 @@
                                             <div class="card">
                                                 <div class="pricing-content pd-bottom-40px">
                                                     <div class="subtitle">Lifetime</div>
-                                                    <div class="heading-h1-size mg-right-8px"><s>$99.99</s><br>$49.99</div>
+                                                    <div class="heading-h1-size mg-right-8px"><s>$99.99</s><br>FREE</div>
                                                     <p>Access paid once.</p>
                                                     <div class="mg-top-48px">
                                                         <div class="text-200 bold color-neutral-800 list">What &#x27;s included:</div>
@@ -354,7 +354,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="mg-top-24px">
-                                                        <a href="https://whop.com/alphanova" class="btn-primary width-100 w-button">Get Access Now</a>
+                                                        <a href="https://discord.gg/3nvC4FzxpJ" class="btn-primary width-100 w-button">Get Access Now</a>
                                                     </div>
                                                 </div>
                                             </div>
