--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                     </div>
                 </div>
             </div>
+            <div class="discord-members-wrapper">
+                <img src="https://assets-global.website-files.com/6587d0b661a003fa4e1b5312/6588da81dd7c62ee2cd84ae3_zzsdoklw.png" loading="lazy" style="opacity: 1;" width="63" alt="" data-w-id="fc8a188b-4634-d570-bc77-b2368f08d793" class="discord-members-logo"><p data-w-id="fc8a188b-4634-d570-bc77-b2368f08d794" style="opacity: 1;" class="text-size-20 text-style-allcaps">Trusted by 15,000+ Verified Traders</p>
+            </div>
             <div class="section">
                 <div class="subtitle">Mission</div>
                 <div class="container-huge">
@@ -202,8 +205,8 @@
                     </div>
                 </div>
             </div>
-            <div>
-                <video autoplay muted loop src="alphavideo.mp4" style="cursor:auto;width:50%;height:50%;border-radius:0px;display:block;object-fit:cover;background-color:#0d0e14;object-position:center">
+            <div class="feature-section-image">
+                <img src="https://assets-global.website-files.com/6587d0b661a003fa4e1b5312/6588deec9c1ad56db2446265_xxokf.png" loading="lazy" width="885" sizes="(max-width: 479px) 82vw, (max-width: 767px) 85vw, (max-width: 991px) 84vw, (max-width: 1439px) 83vw, 885px" alt="" srcset="https://assets-global.website-files.com/6587d0b661a003fa4e1b5312/6588deec9c1ad56db2446265_xxokf-p-500.png 500w, https://assets-global.website-files.com/6587d0b661a003fa4e1b5312/6588deec9c1ad56db2446265_xxokf-p-800.png 800w, https://assets-global.website-files.com/6587d0b661a003fa4e1b5312/6588deec9c1ad56db2446265_xxokf.png 1028w" class="image-3">
             </div>
             <div data-w-id="0ea0797f-1865-3424-e1a3-c4fb3ea63fbc" class="section">
                 <div class="subtitle">FEATURES</div>
