--- a/index.html
+++ b/index.html
@@ -205,6 +205,15 @@
                     </div>
                 </div>
             </div>
+            <div id="home-more" class="home-more-section">
+                <div class="wrapper-1280px">
+                    <div class="home-more-head-container">
+                        <h2 data-w-id="70a298bb-0147-5227-5f3e-f5b372b79159" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="home-more-heading">Unsere Philosophie.<br>Dein Mehrwert.</h2>
+                        <div data-w-id="5ec46420-5d4d-7736-3d4e-531eb9f813f9" style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;" class="home-more-para-container"><p class="home-more-para">Wir sind der festen Überzeugung, dass der Schlüssel zu erfolgreichen Handels-Entscheidungen darin besteht, die<strong> richtigen Informationen zur richtigen Zeit</strong> zu haben. <br>Deshalb filtern wir laufend alle Informationsquellen und durchleuchten Daten sowie Charts, um unseren Abonnenten <strong>exklusive und wertvolle Insights</strong> zu liefern, die sie benötigen, um fundierte und profitable Entscheidungen treffen zu können.</p>
+                    </div>
+                </div>
+            </div>
+            </div>
             <div class="feature-section-image">
                 <img src="https://assets-global.website-files.com/6587d0b661a003fa4e1b5312/6588deec9c1ad56db2446265_xxokf.png" loading="lazy" width="885" sizes="(max-width: 479px) 82vw, (max-width: 767px) 85vw, (max-width: 991px) 84vw, (max-width: 1439px) 83vw, 885px" alt="" srcset="https://assets-global.website-files.com/6587d0b661a003fa4e1b5312/6588deec9c1ad56db2446265_xxokf-p-500.png 500w, https://assets-global.website-files.com/6587d0b661a003fa4e1b5312/6588deec9c1ad56db2446265_xxokf-p-800.png 800w, https://assets-global.website-files.com/6587d0b661a003fa4e1b5312/6588deec9c1ad56db2446265_xxokf.png 1028w" class="image-3">
             </div>
