--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html  data-wf-page="656ec1b1652fb40bf95a51e1" data-wf-site="634a16ea2ddfdb723e49da69">
     <head>
         <meta charset="utf-8"/>
-        <title>Alpha Nova - The Ultimate Trading Community</title>
+        <title>Alpha Nova - Die Ultimative Trading Ki</title>
         <meta property="og:type" content="website"/>
         <meta content="summary_large_image" name="twitter:card"/>   
         <meta content="width=device-width, initial-scale=1" name="viewport"/>
@@ -44,38 +44,6 @@
                 cid: "ieg9rc87"
             });
             fpr("click");
-        </script>
-        <!-- REFERSION TRACKING: BEGIN -->
-        <script src="//profitalgo.refersion.com/tracker/v3/pub_e0bbc0f34cab57071f0c.js"></script>
-        <script>
-            _refersion(function() {
-                _rfsn._setSource("CHARGEBEE");
-            });
-        </script>
-        <!-- REFERSION TRACKING: END -->
-        <!-- Meta Pixel Code -->
-        <script>
-            !function(f, b, e, v, n, t, s) {
-                if (f.fbq)
-                    return;
-                n = f.fbq = function() {
-                    n.callMethod ? n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-                }
-                ;
-                if (!f._fbq)
-                    f._fbq = n;
-                n.push = n;
-                n.loaded = !0;
-                n.version = '2.0';
-                n.queue = [];
-                t = b.createElement(e);
-                t.async = !0;
-                t.src = v;
-                s = b.getElementsByTagName(e)[0];
-                s.parentNode.insertBefore(t, s)
-            }(window, document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
-            fbq('init', '1701693166840100');
-            fbq('track', 'PageView');
         </script>
         <noscript>
             <img height="1" width="1" style="display:none" src="nova.logopng"/>
@@ -127,7 +95,7 @@
                             <nav class="nav-dropdown-list w-dropdown-list"></nav>
                         </div>
                         <div class="burger-button-wrap">
-                            <a href="https://discord.gg/3nvC4FzxpJ" class="button-3 w-button">Buy Now</a>
+                            <a href="https://discord.gg/3nvC4FzxpJ" class="button-3 w-button">Zugang Sichern</a>
                         </div>
                     </nav>
                     <div class="nav-buttons-wrapper">
@@ -141,7 +109,7 @@
                             </div>
                         </div>
                         <div class="tablet-hide">
-                            <a href="https://discord.gg/3nvC4FzxpJ" class="button-3 w-button">Get Access</a>
+                            <a href="https://whop.com/alphanova/" class="button-3 w-button">Trading Ki</a>
                         </div>
                     </div>
                 </div>
@@ -151,12 +119,11 @@
                     <div class="jome-1-hero-wrap">
                         <div id="w-node-_159424c2-a6d2-5785-1a75-7da9b1b0762d-f95a51e1" class="container-medium text-align-center">
                             <h1 data-w-id="159424c2-a6d2-5785-1a75-7da9b1b0762e" style="opacity:0" class="margin-bottom margin-xsmall">
-                                Get started with<span class="text-span"> Alpha Nova</span>
+                                Starte durch mit<span class="text-span"> Alpha Nova</span>
                             </h1>
                             <p data-w-id="159424c2-a6d2-5785-1a75-7da9b1b07632" style="opacity:0" class="margin-bottom margin-small">Elevate your trading game with our Platform🚀</p>
                             <div data-w-id="159424c2-a6d2-5785-1a75-7da9b1b07634" style="opacity:0" class="buttons-row">
-                                <a href="https://discord.gg/ByKvy3srnq" class="button tertriary-copy w-button">Free Discord</a>
-                                <a href="https://discord.gg/3nvC4FzxpJ" class="button w-button">Get Access</a>
+                                <a href="https://whop.com/alphanova/" class="button w-button">Exclusiver Zugang</a>
                             </div>
                         </div>
                         <div class="home-1-hero-images">
@@ -178,29 +145,29 @@
                 <div class="container-huge">
                     <div class="container-medium">
                         <div class="margin-bottom margin-medium">
-                            <h2 class="text-align-center">Why join Alpha Nova?</h2>
+                            <h2 class="text-align-center">Wieso AlphANova?</h2>
                         </div>
                     </div>
                     <div class="features-1-grid">
                         <div class="features-1-card">
                             <img src="school.png" loading="lazy" alt="" class="features-1-card-icon"/>
-                            <h3 class="heading-medium">Learn and Earn</h3>
-                            <p>Alpha Nova is not only a trading platform. There will be tonse of opportunities for the members to earn money besides trading. Stay tuned🤫.</p>
+                            <h3 class="heading-medium">Alles in Einem</h3>
+                            <p>AlphaNova enthält so gut wie jeden Basic Indikator auf TradingView. Viele zahlen <strong>TradingView-Premium</strong> nur, damit sie mehr als 2 Indikatoren benutzen können.<br> AlphaNova erlaubt dir auch ohne $20/Monat für TradingView-Premium das maximum raus zu holen. </p>
                         </div>
                         <div class="features-1-card">
                             <img src="rising.png" loading="lazy" alt="" class="features-1-card-icon"/>
-                            <h3 class="heading-medium">Sharing Alpha</h3>
-                            <p>One of the key missions of Alpha Nova is give their users an edge for the crypto markets. Members are also able to become analysists themself when they perform good.</p>
+                            <h3 class="heading-medium">Weniger Komplexität</h3>
+                            <p>Viele Trader probieren jeden einzelnen Indikator auf TradingView aus und werden trotzdem nicht profitabel. Hier soll AlphaNova helfen,<br> indem wir 2 Indikatoren zu Verfügung stellen, welche für jeden Trader von SwingTrader-Scalper genutzt werden kann.</p>
                         </div>
                         <div class="features-1-card">
                             <img src="hugging.png" loading="lazy" alt="" class="features-1-card-icon"/>
-                            <h3 class="heading-medium">Beginner Friendly</h3>
+                            <h3 class="heading-medium">Anfänger Freundlich</h3>
                             <p>The mission of Alpha Nova is to create an edicational platform for everyone (Beginners included).</p>
                         </div>
                         <div class="features-1-card">
                             <img src="affortable.png" loading="lazy" alt="" class="features-1-card-icon"/>
-                            <h3 class="heading-medium">Affordable</h3>
-                            <p>Since our platform is targeting beginner traders, we decided to make Alpha Nova accessible to everyone. From people with 7 figures portfolios to beginners with now money to start with.</p>
+                            <h3 class="heading-medium">Bezahlbar</h3>
+                            <p>Da sich unsere Trading Ki größtenteils an Trader mit weniger Erfahrung richtet, welche meistens auch nicht allzu viel Start-Kapital mitbringen,<br> haben wir uns entschieden AlphaNova für einen fairen Preis zu veröffentlichen, sodass sich mehr anstrebende Trader die Ki leisten können.  </p>
                         </div>
                     </div>
                 </div>
